# web-search-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  agent.py  app.py  atlassian_mcp_client.py  mcp_tools.py  pyproject.toml  requirements.txt
