[project]
name = "chatbot-with-websearchmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.2.0",
    "mcp>=0.1.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
]
